Improve student search UI with table, errors

--- a/client/index.html
+++ b/client/index.html
@@ -24,7 +24,7 @@
 
       <button class="primary" onclick="searchSeat()">Search</button>
 
-      <pre id="result" class="result-box"></pre>
+      <div id="result" class="result-box"></div>
     </section>
 
   </div>
