Update placeholder text for registration number input

--- a/client/index.html
+++ b/client/index.html
@@ -19,7 +19,7 @@
       <input
         type="text"
         id="regNo"
-        placeholder="Register Number"
+        placeholder="Ex:21AD217"
       />
 
       <button class="primary" onclick="searchSeat()">Search</button>
